# vanilla_roblox_compiler

./: .gitignore  Cargo.toml
in/: ReflectionMetadata.xml  index.theme  mappings.json  tags.json  tags_new.json
in/palettes/: agnosia-b.json  agnosia-rg.json  colourful.json  contempora.json  mono.json  mono_blue.json  mono_green.json  mono_purple.json  mono_red.json  mono_yellow.json
in/palettes_old/: colourful.json  mono.json  mono_blue.json  mono_green.json  mono_purple.json  mono_red.json  mono_yellow.json
in/tag_trees/: cyan.txt  fuschia.txt  gold.txt  green.txt  grey.txt  indigo.txt  lime.txt  magenta.txt  orange.txt  red.txt  uncoloured.txt
src/: compile.rs  contempora.rs  main.rs
src/roblox/: api.rs  mod.rs
src/vanilla/: mod.rs  vanilla_serde.rs
