[package]
name = "vanilla_roblox_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6.0"
anyhow = "1.0"
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
hex_color = "1.0.0"
itertools = "0.10.3"
chrono = "0.4.19"
rayon = "1.5.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }